Update and rename audio_raetsel 12.html to index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <!-- Audio-Player -->
     <audio controls>
-        <source src="https://www.dropbox.com/scl/fi/mjzytxnr170tg97br287m/12.m4a?rlkey=00yeoczeiueas8gkvzkyylbjb&dl=1" type="audio/mpeg">
+        <source src="https://maike98.github.io/audio_raetsel-12/12.m4a">
         Dein Browser unterstützt keine Audio-Wiedergabe.
     </audio>
 
@@ -63,7 +63,7 @@
 
     <div>
         <button onclick="showTip('tip2')">Tipp 2</button>
-        <p id="tip2" class="tip"> <img src="https://www.dropbox.com/scl/fi/hlzcmzslyv60wxjmn17ks/12.jpeg?rlkey=8v9s7pslbut7by7uwx5ldmeg2&dl=1"</p>
+        <p id="tip2" class="tip"> <img src="https://maike98.github.io/audio_raetsel-12/12.jpeg</p>
     </div>
 </body>
 </html>
